--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,121 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  background-color: rgb(9, 9, 9);
+  height: auto;
+  width: 100vw;
+  padding: 5px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: fixed;
+}
+
+.navbar-list {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.list-item {
+  padding: 5px;
+
+}
+
+.list-item a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.headers {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  background-color: rgb(90, 76, 76);
+  padding-top: 10vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.headers .title {
+  font-size: 40px;
+  color: whitesmoke;
+  text-shadow: 2px;
+  text-decoration: underline;
+  margin-bottom: 10px;
+}
+
+.headers .searchBox {
+  width : 15vw;
+  height: 4vh;
+  border-radius: 10px;
+}
+
+.headers .filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px;
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+
+.headers .filters button {
+  margin : 5px;
+  background-color: black;
+  border-radius: 5px;
+  color: white;
+}
+
+.movie-item {
+  display: flex;
+  height: auto;
+  padding: 10px;
+  flex-direction: row;
+  border-radius: 2px;
+}
+
+.movie-item .movie-image {
+  max-height: 30vh;
+  border-radius: 10px;
+}
+
+.movie-item .movie-details {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.movie-item .movie-extras {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.movie-item .movie-extras p {
+  padding-right: 10px;
+}
+
+.galleryView {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.tv-card{
+  width: 20vw;
+}
+
+.tv-card .tv-title {
+  font-size: 30px;
+}
+
+.tv-card .tv-image {
+  height: 40vh;
 }
