--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,8 @@
   color: white;
 }
 
+
+
 .headers {
   display: flex;
   flex-direction: column;
@@ -119,4 +121,43 @@
 
 .tv-card .tv-image {
   height: 40vh;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 80vw;
+  margin-left: 10vw;
+}
+
+.details .poster { 
+  margin-top: 10px;
+  height: 50vh;
+  width:max-content;
+  border-radius: 20px;
+}
+
+.details .title {
+  font-size: 30px;
+  font-style: italic;
+}
+
+.details .desc {
+  text-align: center;
+}
+
+.navigators {
+  position: relative;
+  top: 30vh;
+}
+
+.prev {
+  float: left;
+  height: 10vh;
+}
+
+.next { 
+  float: right;
+  height: 10vh;
 }
